# Temp

./: Aula.cpp  Aula.h  CMakeLists.txt  Estudante.cpp  Estudante.h  GestaoHorarios.cpp  GestaoHorarios.h  Pedido.cpp  Pedido.h  UCTurma.cpp  UCTurma.h  main.cpp
Tests/: firstdoc.cpp
